k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
  - name: fastapi
    port: 80
    targetPort: 80

    protocol: TCP
